# ccsh

./: .clang-tidy  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  ccsh.pc  makefile  vpnconfig.cpp  wrappers.md
CMakeModules/: CodeCoverage.cmake
cc/: CMakeLists.txt  ccsh_compiler.cpp
include/ccsh/: CWrapper.hpp  ccsh.hpp  ccsh_builtins.hpp  ccsh_command.hpp  ccsh_fdstream.hpp  ccsh_filesystem.hpp  ccsh_operators.hpp  ccsh_ratio.hpp  ccsh_regex.hpp  ccsh_runtime.hpp  ccsh_tty.hpp  ccsh_types.hpp  ccsh_utils.hpp  ccsh_utils_windows.cpp  ccsh_wrappers.hpp  filesystem.hpp
include/ccsh/builtins/: cd.hpp  pwd.hpp
include/ccsh/simpleopt/: SimpleGlob.h
include/ccsh/tmp-lib/: call_kill.hpp
lib/: CMakeLists.txt  ccsh_command.cpp  ccsh_command_posix.cpp  ccsh_command_windows.cpp  ccsh_fdstream.cpp  ccsh_filesystem.cpp  ccsh_internals.hpp  ccsh_internals_posix.hpp  ccsh_internals_windows.hpp  ccsh_operators.cpp  ccsh_utils.cpp  ccsh_utils_posix.cpp  ccsh_utils_windows.cpp
lib/builtins/: cd.cpp  pwd.cpp
lib/cygwin/: dirent.h  glob.cpp  glob.h
sample/: CMakeLists.txt  main.cpp  vars
src/: CWrapper.hpp  ccsh.cpp  ccsh.hpp  ccsh_command.cpp  ccsh_command.hpp  ccsh_operators.cpp  ccsh_operators.hpp  ccsh_regex.hpp  ccsh_start.cpp  ccsh_utils.cpp  ccsh_utils.hpp  ccsh_wrappers.hpp  clingrc.hpp  main.cpp
src/core/: base3264.hpp  cat.hpp  nl.hpp  od.hpp  tac.hpp
start/: CMakeLists.txt  ccsh_custom_user_interface.cpp  ccsh_custom_user_interface.hpp  ccsh_start.cpp  ccsh_ui.cpp  clingrc.hpp
test/: CMakeLists.txt  commons.hpp  main.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  testA.cpp  testB.cpp  testC.cpp  testE.cpp  testF.cpp  test_builtin.cpp  test_env_var.cpp  test_function.cpp  test_mapping.cpp  test_native.cpp  test_pipe.cpp  test_redirect.cpp  test_stream.cpp  test_wrappers_core.cpp  var test.bat  vars.sh
ui/: CMakeLists.txt  ccsh_custom_user_interface.cpp  ccsh_custom_user_interface.hpp  ccsh_ui.cpp  ccshrc.hpp  clingrc.hpp
wrappers/: CMakeLists.txt
wrappers/ccsh/: cc.hpp  core.cpp  core.hpp
wrappers/ccsh/cc/: gcc.hpp
wrappers/ccsh/core/: base3264.hpp  cat.hpp  cksum.hpp  find.hpp  fmt.hpp  fold.hpp  head.hpp  ls.hpp  nl.hpp  od.hpp  pr.hpp  shasum.hpp  sum.hpp  tac.hpp  tail.hpp  wc.hpp
